# OpenPrintTagGUI

./: .gitignore  .gitmodules  README.md  make_appimage.sh  make_flatpak.sh  make_macos_app.sh  make_macos_dmg.sh  make_windows.bat  make_windows.sh  openprinttag_gui.py  pyproject.toml  requirements.txt
GUI/: colorconversion.py  customcombobox.py  gui.py  gui.ui  property_tree.py
data/: material_classes.json  material_properties.json  material_properties_implication.json  material_temps.json  material_temps.yaml  material_types.json
data/filaments/: colorfabb.json  colorfabb.yaml  filaxix.json  fillamentum.json  geeetech.json  kimya.json  kimya.yaml  polymaker.json  prusament.json  recreus.json  smart_materials_3d.json  spectrum.json  sunlu.json  tinmorry.json
dumps/: hf-15-E0040108662ED4CF-dump.json  log.txt
openprinttaggui/: __main__.py  openprinttag_gui.desktop  openprinttag_gui.icns  openprinttag_gui.py
openprinttaggui/GUI/: colorconversion.py  filterbox.py  gui.py  gui.ui  property_tree.py
openprinttaggui/data/: material_temps.yaml
openprinttaggui/data/filaments/: filaxix.yaml  fillamentum.yaml  geeetech.yaml  polymaker.yaml  prusament.yaml  recreus.yaml  smart_materials_3d.yaml  spectrum.yaml  sunlu.yaml
openprinttaggui/database/: material_temps.yaml
openprinttaggui/database/filaments/: colorfabb.yaml  filaxix.yaml  fillamentum.yaml  geeetech.yaml  kimya.yaml  polymaker.yaml  prusament.yaml  recreus.yaml  smart_materials_3d.yaml  spectrum.yaml  sunlu.yaml  tinmorry.yaml
