[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openprinttag_gui"
description = "OpenPrintTag Graphical User Interface"
maintainers = [
    {name = "Bjoern Kerler", email = "info@revskills.de"}
]
readme = "README.md"
license = {file = "LICENSE"}
version = "1.0.0"
requires-python = ">= 3.10"
dependencies = [
    "pyside6",
    "pyserial",
    "ndeflib~=0.3.3",
    "pyyaml~=6.0",
    "cbor2~=5.6.4",
    "jinja2~=3.1.5",
    "numpy~=2.2.3",
    "simple_parsing~=0.1.7",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
keywords = ["openprinttag", "prusa", "3dprinting", "filament", "nfc"]

[project.urls]
Repository = "https://github.com/bkerler/OpenPrintTagGUI.git"
Issues = "https://github.com/bkerler/OpenPrintTagGUI/issues"

[project.gui-scripts]
openprinttag_gui = "openprinttag_gui:main"

[tool.hatch.build.targets.sdist]
include = [
    "data/*.json",
    "data/filaments/*.json",
    "examples/*.bin"
]

[tool.hatch.build.targets.wheel.force-include]
"openprinttag_gui.py" = "openprinttag_gui.py"
"LICENSE" = "LICENSE"
"README.md" = "README.md"
