[build-system]
requires = ["hatchling","briefcase"]
build-backend = "hatchling.build"

[tool.briefcase]
project_name = "OpenPrintTagGUI"
bundle = "de.revskills.openprinttaggui"
version = "1.0.1"
url = "https://github.com/bkerler/OpenPrintTagGUI"
license.file = "LICENSE"
description = "GUI for the Open Print Tag standard"
author = "bkerler"
author_email = "info@revskills.de"

[tool.briefcase.app.openprinttaggui]
formal_name = "Open Print Tag GUI"
icon = "openprinttaggui/openprinttag_gui"
installer_icon = "openprinttaggui/openprinttag_gui"
description = "Graphical tool for reading/writing Open Print Tag NFC data"
sources = ["openprinttaggui"]
requires = []

[tool.briefcase.app.openprinttaggui.linux]
system_requires = []

[tool.briefcase.app.openprinttaggui.linux.appimage]
manylinux = "manylinux_2_28"
system_requires = [
    "libxkbcommon-x11-*",
    "libxcb-*"
]

[project]
name = "openprinttag_gui"
description = "OpenPrintTag Graphical User Interface"
maintainers = [
    {name = "Bjoern Kerler", email = "info@revskills.de"}
]
readme = "README.md"
license = {file = "LICENSE"}
version = "1.0.1"
requires-python = ">= 3.10"
dependencies = [
"pyside6",
"pyserial",
"crcmod",
"ndeflib~=0.3.3",
"pyyaml~=6.0",
"ndeflib~=0.3.3",
"cbor2~=5.7.1",
"jinja2~=3.1.5",
"numpy~=2.2.3",
"simple_parsing~=0.1.7",
"referencing~=0.37.0",
"jsonschema~=4.25.1",
"hidapi",
"Cython"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
keywords = ["openprinttag", "prusa", "3dprinting", "filament", "nfc"]

[project.urls]
Repository = "https://github.com/bkerler/OpenPrintTagGUI.git"
Issues = "https://github.com/bkerler/OpenPrintTagGUI/issues"

[project.gui-scripts]
openprinttag_gui = "openprinttag_gui:main"

[tool.hatch.build.targets.sdist]
include = [
    "openprinttaggui/data/*.yaml",
    "openprinttaggui/data/filaments/*.yaml",
    "examples/*.bin"
]

[tool.hatch.build.targets.wheel.force-include]
"openprinttag_gui.py" = "openprinttaggui/openprinttag_gui.py"
"LICENSE" = "LICENSE"
"README.md" = "README.md"
